samples/_failures_safe/1761303037_11fe68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cda0eb6.c: In function ‘main’:
./samples/SAFE/__tmp_1cda0eb6.c:154:9: error: expected declaration or statement at end of input
  154 |         printf("\nVerification: Data matches original\n");
      |         ^~~~~~
./samples/SAFE/__tmp_1cda0eb6.c:154:9: error: expected declaration or statement at end of input
